[FIX] AlignedFlowLayout: Show overflow to support horizon outlines / shadows
BCP: 2380053119

--- a/src/sap.ui.layout/src/sap/ui/layout/themes/base/AlignedFlowLayout.less
+++ b/src/sap.ui.layout/src/sap/ui/layout/themes/base/AlignedFlowLayout.less
@@ -12,7 +12,7 @@
 
 .sapUiAFLayoutItem,
 .sapUiAFLayoutEnd {
-	overflow: hidden;
+	overflow: visible;
 }
 
 .sapUiAFLayoutItem {
